--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-formik": "^0.1.5",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
