--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^12.20.19",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.9",
+    "aws-amplify": "^5.2.1",
     "crypto-js": "^4.1.1",
     "dayjs": "^1.10.7",
     "formik": "^2.2.9",
@@ -27,7 +28,7 @@
     "react-formik": "^0.1.5",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
@@ -83,7 +84,7 @@
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
     "axios": "^0.21.4",
-    "babel-core": "^6.26.3",
+    "babel-core": "^4.7.16",
     "babel-loader": "^8.2.3",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
@@ -95,7 +96,7 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "express": "^4.17.1",
     "html-webpack-plugin": "^5.5.0",
-    "json-server": "^0.16.3",
+    "json-server": "^0.17.3",
     "react-router-dom": "^6.2.1",
     "sass": "^1.49.7",
     "sass-loader": "^12.4.0",
